<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/payment_msg"
            android:textSize="20dp"
            android:textStyle="bold"
            android:textColor="@color/colorPrimary"
            android:layout_marginBottom="50dp"
            android:layout_above="@+id/llParent"
            android:layout_centerHorizontal="true"/>

    <LinearLayout
            android:id="@+id/llParent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_centerInParent="true"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp">

        <TextView
                android:id="@+id/tvCash"
                style="@style/button_style"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/button_background"
                android:text="@string/cash"
                android:textSize="16dp"
                android:textColor="@color/color_text_white"/>

        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/or"
                android:textSize="16dp"
                android:textStyle="bold"
                android:textColor="@color/text_color_black"
                android:gravity="center"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"/>

        <TextView
                android:id="@+id/tvBank"
                style="@style/button_style"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/button_background"
                android:text="@string/bank"
                android:textSize="16dp"
                android:textColor="@color/color_text_white"/>

        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/or"
                android:textSize="16dp"
                android:textStyle="bold"
                android:textColor="@color/text_color_black"
                android:gravity="center"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"/>

        <TextView
                android:id="@+id/tvCreditCard"
                style="@style/button_style"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/button_background"
                android:text="@string/credit_card"
                android:textSize="16dp"
                android:textColor="@color/color_text_white"/>


    </LinearLayout>

</RelativeLayout>