<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

        <include
                android:id="@+id/sign_bar"
                layout="@layout/sign_header"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp" />

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <com.rilixtech.CountryCodePicker
                    android:id="@+id/ccpSignIn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:textAlignment="center"
                    app:ccp_defaultNameCode="SD"
                    app:ccp_hideNameCode="true"
                    app:ccp_textColor="@color/user_text_color"
                    app:ccp_textSize="14dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="5dp" />

            <EditText
                    android:id="@+id/etPhoneNoSignIn"
                    style="@style/Zawajina.EditText.Style"
                    android:fontFamily="@font/sf_compact_text_regular"
                    android:hint="@string/phoneNo"
                    android:inputType="phone"
                    android:layout_marginLeft="5dp"
                    android:layout_marginStart="5dp"/>

        </LinearLayout>

        <EditText
                android:id="@+id/etPassword"
                style="@style/Zawajina.EditText.Style"
                android:fontFamily="@font/sf_compact_text_regular"
                android:hint="@string/password"
                android:inputType="textPassword" />


        <TextView
                android:id="@+id/btnRememberMe"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="20dp"
                android:drawableLeft="@drawable/check_box_unchecked"
                android:drawablePadding="20dp"
                android:fontFamily="@font/sf_compact_text_regular"
                android:text="@string/remember_me"
                android:textColor="@color/font"
                android:textSize="14dp"
                android:visibility="gone" />

        <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="25dp"
                android:layout_marginRight="20dp">

            <RelativeLayout
                    android:id="@+id/btnSignIn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true">

                <TextView
                        android:id="@+id/your_ride_cancel"
                        style="@style/button_style"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/button_background"
                        android:text="@string/sign_in"
                        android:textColor="@color/color_text_white" />
            </RelativeLayout>

            <RelativeLayout
                    android:id="@+id/llProgress_bar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:visibility="gone">

                <ProgressBar
                        android:id="@+id/progress_bar"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_centerInParent="true"
                        android:elevation="5dp"
                        android:padding="5dp" />
            </RelativeLayout>

        </RelativeLayout>

        <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="20dp">

            <TextView
                    android:id="@+id/tvForgotPassword"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:fontFamily="@font/sf_compact_text_regular"
                    android:padding="10dp"
                    android:text="@string/forget_password"
                    android:textColor="@color/colorPrimary"
                    android:textSize="14dp" />

            <TextView
                    android:id="@+id/tvSignUp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:fontFamily="@font/sf_compact_text_regular"
                    android:padding="10dp"
                    android:text="@string/sign_up_tv"
                    android:textColor="@color/colorPrimary"
                    android:textSize="14dp" />
        </RelativeLayout>

    </LinearLayout>

    <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="20dp"
            android:visibility="gone">

        <ImageView
                android:id="@+id/ivTermsCheckBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingEnd="10dp"
                android:paddingRight="10dp"
                android:src="@drawable/check_box_unchecked" />

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/sf_compact_text_regular"
                android:text="@string/policy_msg"
                android:textColor="@color/font"
                android:textSize="12dp" />

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="3dp"
                android:layout_marginLeft="3dp"
                android:fontFamily="@font/sf_compact_text_regular"
                android:text="@string/terms"
                android:textColor="@color/blue"
                android:textSize="12dp"

                />

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="3dp"
                android:layout_marginLeft="3dp"
                android:fontFamily="@font/sf_compact_text_regular"
                android:text="@string/and"
                android:textColor="@color/font"
                android:textSize="12dp"

                />

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="3dp"
                android:layout_marginLeft="3dp"
                android:fontFamily="@font/sf_compact_text_regular"
                android:text="@string/privicy_policy"
                android:textColor="@color/blue"
                android:textSize="12dp"

                />
    </LinearLayout>


</RelativeLayout>