<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <RelativeLayout
            android:id="@+id/rlCancelBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:padding="10dp">
        <ImageView
                android:layout_width="15dp"
                android:layout_height="15dp"
                android:src="@drawable/cancel"/>
    </RelativeLayout>

    <RelativeLayout
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp">
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/service_detail"
                android:textStyle="bold"
                android:textSize="16dp"
                android:textColor="@color/colorPrimary"/>
    </RelativeLayout>

    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/title">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            >

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="20dp">

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                <TextView
                        style="@style/Zawajina.HomeTextView.Style"
                        android:fontFamily="@font/sf_compact_display_bold"
                        android:text="@string/name"
                        android:textColor="@color/colorPrimary"/>

                <TextView
                        style="@style/Zawajina.HomeTextView3.Style"
                        android:id="@+id/tvName"
                        android:fontFamily="@font/sf_compact_text_regular"
                        android:text="@string/name"/>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="10dp">

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                <TextView
                        style="@style/Zawajina.HomeTextView.Style"
                        android:fontFamily="@font/sf_compact_display_bold"
                        android:text="@string/my_price"
                        android:textColor="@color/colorPrimary"/>

                <TextView
                        style="@style/Zawajina.HomeTextView3.Style"
                        android:id="@+id/tvPrice"
                        android:fontFamily="@font/sf_compact_text_regular"
                        android:text="@string/price"/>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="10dp">

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                <TextView
                        style="@style/Zawajina.HomeTextView.Style"
                        android:fontFamily="@font/sf_compact_display_bold"
                        android:text="@string/service_"
                        android:textColor="@color/colorPrimary"/>

                <TextView
                        style="@style/Zawajina.HomeTextView3.Style"
                        android:id="@+id/tvService"
                        android:fontFamily="@font/sf_compact_text_regular"
                        android:text="@string/name_"/>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="10dp">

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                <TextView
                        style="@style/Zawajina.HomeTextView.Style"
                        android:fontFamily="@font/sf_compact_display_bold"
                        android:text="@string/details_"
                        android:textColor="@color/colorPrimary"/>

                <TextView
                        style="@style/Zawajina.HomeTextView3.Style"
                        android:id="@+id/tvDetail"
                        android:fontFamily="@font/sf_compact_text_regular"
                        android:text="@string/details_"/>
            </LinearLayout>
        </LinearLayout>

    </LinearLayout>

    </ScrollView>
</RelativeLayout>