<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

        <include
                android:id="@+id/sign_bar"
                layout="@layout/sign_header"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>

        <EditText
                style="@style/Zawajina.EditText.Style"
                android:id="@+id/etOldPassword"
                android:hint="@string/oldPassword"
                android:fontFamily="@font/sf_compact_text_regular"
                android:inputType="textPassword"/>

        <EditText
                style="@style/Zawajina.EditText.Style"
                android:id="@+id/etNewPassword"
                android:hint="@string/newPassword"
                android:fontFamily="@font/sf_compact_text_regular"
                android:inputType="textPassword"/>

        <EditText
                style="@style/Zawajina.EditText.Style"
                android:id="@+id/etConfirmPassword"
                android:hint="@string/confirmPassword"
                android:fontFamily="@font/sf_compact_text_regular"
                android:inputType="textPassword"/>


        <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp">
            <RelativeLayout
                    android:id="@+id/btnChangePassword"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true">
                <TextView
                        style="@style/button_style"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/button_background"
                        android:text="@string/changePassword_"
                        android:textColor="@color/color_text_white"/>
            </RelativeLayout>

            <RelativeLayout
                    android:id="@+id/llProgress_bar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:visibility="gone">
                <ProgressBar
                        android:id="@+id/progress_bar"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_centerInParent="true"
                        android:elevation="5dp"
                        android:padding="5dp"
                />
            </RelativeLayout>
        </RelativeLayout>

    </LinearLayout>
</RelativeLayout>
