<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
        android:layout_height="match_parent">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

        <include
                android:id="@+id/sign_bar"
                layout="@layout/sign_header"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:text="@string/deposit_msg"
                android:textColor="@color/font"
                android:textSize="16dp"
                android:textStyle="bold"
                android:fontFamily="@font/sf_compact_text_regular"/>

        <EditText
                style="@style/Zawajina.EditText.Style"
                android:id="@+id/etDeposit"
                android:hint="@string/deposit_"
                android:fontFamily="@font/sf_compact_text_regular"
                android:inputType="numberDecimal"/>

        <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp">
            <RelativeLayout
                    android:id="@+id/btnSubmit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true">
                <TextView
                        android:id="@+id/your_ride_cancel"
                        style="@style/button_style"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/button_background"
                        android:text="@string/submit"
                        android:textColor="@color/color_text_white"/>
            </RelativeLayout>

        </RelativeLayout>

    </LinearLayout>
</RelativeLayout>
