<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

    <TextView
            android:id="@+id/tvTransaction"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/colorPrimary"
            android:text="@string/transaction"
            android:textSize="14dp"
            android:fontFamily="@font/sf_compact_text_bold"/>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp">

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <TextView
                    style="@style/Zawajina.HomeTextView.Style"
                    android:fontFamily="@font/sf_compact_display_bold"
                    android:text="@string/date_"
                    android:textColor="@color/colorPrimary"/>

            <TextView
                    style="@style/Zawajina.HomeTextView2.Style"
                    android:id="@+id/tvDate"
                    android:fontFamily="@font/sf_compact_text_regular"
                    android:text="date"/>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp">

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <TextView
                    style="@style/Zawajina.HomeTextView.Style"
                    android:fontFamily="@font/sf_compact_display_bold"
                    android:text="@string/deposit"
                    android:textColor="@color/colorPrimary"/>

            <TextView
                    style="@style/Zawajina.HomeTextView2.Style"
                    android:id="@+id/tvDeposit"
                    android:fontFamily="@font/sf_compact_text_regular"
                    android:text="deposit"/>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>